@@ -1,3 +1,7 @@
+ClipIt-1.4.1-20110526005 - 26 May. 2011
+
+	+ Added: Added options for static items in menu.
+
 ClipIt-1.4.1-20110526004 - 26 May. 2011
 
 	+ Added: Added option for using right-click menu.
